--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,12 +31,12 @@ jobs:
         run: |
           haxelib setup C:/haxelib
           haxelib install hxcpp > nul
+          haxelib install lime
           haxelib install flixel-addons 3.1.1
           haxelib install flixel 5.3.1
           haxelib install flixel-ui 2.5.0
           haxelib install flixel-tools 1.5.1
           haxelib install hxCodec 2.6.1
-          haxelib install lime 8.0.2
           haxelib install openfl 9.2.0
           haxelib run lime setup
           haxelib install tjson
